--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,8 +140,8 @@ services:
       - '81:81'
       - '403:403'
     volumes:
-      - ./data:/data
-      - ./letsencrypt:/etc/letsencrypt
+      - data:/data
+      - ~/letsencrypt:/etc/letsencrypt
 ---
 services:    
   radarr:
